# pokemon-api

./: .gitignore  CLAUDE.md  README.md  chucknorris.ipynb  main.py  pokemon.ipynb  pyproject.toml  scrape_senators.ipynb  scrape_senators.py  setup_baseball_db.sh  test_main.py  working_with_mysql.ipynb
