[project]
name = "pokemon-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"  # code is 3.6-compatible, but ipykernel/jupyter require 3.10+
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "mysql-connector-python>=9.3.0",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]

